--- a/TeachSync/src/main/webapp/WEB-INF/fragments/footer.jspf
+++ b/TeachSync/src/main/webapp/WEB-INF/fragments/footer.jspf
@@ -1,6 +1,6 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" pageEncoding="UTF-8" %>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<footer class="row ts-bg-white border-top ts-border-teal py-3">
+<footer class="row ts-bg-white border-top ts-border-teal mt-auto py-3">
   <!-- Logo & quote -->
   <div class="col-sm-12 col-md-4">
     <!-- Logo -->
