--- a/TeachSync/src/main/webapp/WEB-INF/fragments/header.jspf
+++ b/TeachSync/src/main/webapp/WEB-INF/fragments/header.jspf
@@ -217,7 +217,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item ts-txt-hover-blue" href="/lst-user-by-type?type=3">Nhân viên</a></li>
-                <li><a class="dropdown-item ts-txt-hover-blue" href="/lst-user">Tài khoản</a></li>
+                <li><a class="dropdown-item ts-txt-hover-blue" href="/list-user">Tài khoản</a></li>
                 <li><a class="dropdown-item ts-txt-hover-blue" href="/request">Đơn xin</a></li>
                 <li><a class="dropdown-item ts-txt-hover-blue" href="/application/list">Duyệt đơn tuyển dụng</a></li>
                 <li><a class="dropdown-item ts-txt-hover-blue" href="/recruitment-campaign/list">Chiến dịch tuyển dụng</a></li>
